# game-engine

./: .gitignore  Cargo.toml  build.rs  diff.patch  rust-toolchain.toml
crates/game_engine_derive/src/: lib.rs
crates/game_engine_ecs/: Cargo.toml  bench.txt
crates/game_engine_ecs/.cargo/: config.toml
crates/game_engine_ecs/benches/: bevy_v_me.rs  flush.rs  iter_bench.rs  real_tough.rs  spawn_bench.rs  system_ecs_vs_vec.rs
crates/game_engine_ecs/examples/: get.rs  minimal_all.rs  perf_spawn.rs
crates/game_engine_ecs/src/: archetype.rs  borrow.rs  bundle.rs  component.rs  entity.rs  lib.rs  macros.rs  message.rs  observers.rs  observers_.rs  query.rs  resource.rs  schedule.rs  storage.rs  system.rs  thread_entity_allocator.rs  threading.rs  world.rs
crates/game_engine_ecs/src/system/: command.rs  function.rs
crates/game_engine_shaders/: Cargo.toml
crates/game_engine_shaders/src/: lib.rs  macros.rs  render.rs  sdf.rs  triangle.rs
crates/game_engine_shaders_types/: Cargo.toml
crates/game_engine_shaders_types/src/: lib.rs  packet.rs  shapes.rs
crates/game_engine_utils/: Cargo.toml
crates/game_engine_utils/src/: graph.rs  lib.rs
game_engine_derive/: Cargo.toml
game_engine_derive/src/: lib.rs
src/: ecs.rs  lib.rs  main.rs  render.rs
src/ecs/: archetype.rs  borrow.rs  bundle.rs  component.rs  entity.rs  query.rs  resource.rs  storage.rs  world.rs
src/render/: components.rs  packet.rs  pass.rs  pipeline.rs  shaders.rs  storage.rs
src/render/pipeline/: triangle.rs
