[package]
name = "game_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
fern = "0.7.1"
glam = "0.30.8"
image = "0.25.8"
log = "0.4.28"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30.12"
game_engine_derive.workspace = true
rand = "0.9.2"

[workspace]
resolver = "3"
members = ["game_engine_derive"]

[workspace.dependencies]
game_engine_derive = { path = "game_engine_derive" }
