[package]
name = "game_engine_ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec.workspace = true
game_engine_derive.workspace = true
log.workspace = true
game_engine_utils.workspace = true

[dev-dependencies]
bevy_ecs = "0.17"
criterion = "0.8"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = true

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1


[[bench]]
name = "iter_bench"
harness = false

[[bench]]
name = "system_ecs_vs_vec"
harness = false

[[bench]]
name = "spawn_bench"
harness = false
