[package]
name = "game_engine_ecs"
version = "0.1.0"
edition = "2024"


[features]
tracy = ["tracy-client/enable"]

[dependencies]
smallvec.workspace = true
game_engine_derive.workspace = true
log.workspace = true
rayon.workspace = true
paste.workspace = true
game_engine_utils.workspace = true
rustc-hash.workspace = true 
tracy-client = { workspace=true }
core_affinity = "0.8.3"

[dev-dependencies]
bevy_ecs = "0.17"
criterion = "0.8"
rayon.workspace = true


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug=true

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1
debug=true


[[bench]]
name = "iter_bench"
harness = false

[[bench]]
name = "system_ecs_vs_vec"
harness = false

[[bench]]
name = "spawn_bench"
harness = false

[[bench]]
name = "flush"
harness = false

[[bench]]
name = "bevy_v_me"
harness = false

[[bench]]
name = "real_tough"
harness = false
